@@ -92,6 +92,9 @@ AC_DEFUN([coreutils_MACROS],
   # for cp.c
   AC_CHECK_FUNCS_ONCE([utimensat])
 
+  # for remove.c
+  AC_CHECK_FUNCS_ONCE([faccessat])
+
   dnl This can't use AC_REQUIRE; I'm not quite sure why.
   cu_PREREQ_STAT_PROG
 
