@@ -172,6 +172,13 @@ write_protected_non_symlink (int fd_cwd,
         mess up with long file names). */
 
   {
+    /* Use faccessat if possible, so as to avoid the expense
+       of processing an N-component name.  */
+#if HAVE_FACCESSAT && AT_EACCESS
+    if (faccessat (fd_cwd, file, W_OK, AT_EACCESS) == 0)
+      return 0;
+#endif
+
     /* This implements #5: */
     size_t file_name_len = strlen (full_name);
 
